Nova versao do site de Karynne Bayer

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,16 @@
 # Site
-title:              Karynne Bayer - Psicologia Clínica 
-bio:                'Olá, bem vindo ao Espaço Terapêutico Karynne Bayer. Agende sua consulta através do número (21) 99893-4111 ou por WhatsApp. Siga-me também nas redes sociais. Aguardo seu contato.' # Colocar aqui uma breve biografia.
+title:              PSICÓLOGA KARYNNE BAYER 
+boas_vindas:        'Bem-vindo a este espaço terapêutico!'
+citacao:            '”O meu resultado é a reconstrução da sua saúde emocional e a criação de novas esperanças!”'
+forma_atendimento:  'Atendimentos on-line e presencial'
+agendamento:        'Agende sua consulta pelo número (21) 99893-4111 ou por WhatsApp'
+redes_sociais:      'Siga-me também nas redes sociais.'
 description:        "Psicóloga pela Universidade Federal Fluminense, 
                     Mestre em Psicologia Social, do Trabalho e das Organizações pela Universidade de Brasília. " # Colocar aqui uma breve descrição.
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo-verde.jpg'
+logo_interno:               'assets/img/logo-verde.jpg'
+logo_principal:               'assets/img/content/foto_rosto.jpg'
 #background:         'assets/img/placeholder-big.jpg'
 background:         'assets/img/background.jpg'
 tiled_bg:           false   # true = Usa a imagem de fundo tamanho normal; false = tamanho extendido.
