--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # Site navigation links
 
 - title: Consultório
-  url: /contact/
+  url: /consultorio/
 - title: Para Empresas
-  url: /projects/
+  url: /empresas/
