--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ disqus_shortname:   karynne-bayer
 mobile:             (21) 99893-4111
 email_dev:          luizfragabr@yahoo.com.br 
 email:              kbayer.psicologia@gmail.com
-instagram:          psicologia_karynnebayer
+instagram:          psikarynnebayer
 #linkedin:           karynne-bayer-5202b46a
 facebook:           Karynne-Bayer
 #twitter:            username
